refactor: v2.0 cleanup and documentation
- Remove all test files and obsolete documentation
- Complete English documentation in /docs
- Remove Claude/Anthropic branding (neutral LLM references)
- Fix agent shutdown bug with channel-based signaling
- Enhance status command with database connection testing
- Simplify logger (remove verbose flag, use config.yaml only)
- Update .gitignore for production deployment
- GitHub organization: senhub-io

Breaking changes:
- Log level now controlled exclusively via config.yaml
- Service management improved with proper shutdown handling

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,13 @@ dist/
 *~
 
 # Config files with sensitive data
-configs/config.yaml
+config.yaml
+configs/
 *.env
+
+# Generated files and directories
+logs/
+certs/
 
 # OS
 .DS_Store
