--- a/.github/workflows/dev-beta-release.yml
+++ b/.github/workflows/dev-beta-release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   create_beta_release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
