--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -10,6 +10,8 @@ jobs:
     # Only run when PR is merged, not when closed without merging
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
