docs: add configuration guides for Continue.dev, Cursor, and Cline
Add comprehensive MCP client configuration guides:

Continue.dev (CONTINUE_CONFIG.md):
- JSON config file format (.continue/mcpServers/)
- Experimental config.json format
- Local and remote server examples
- Environment variable support
- Self-signed certificate handling

Cursor (CURSOR_CONFIG.md):
- mcp.json configuration format
- Project-specific and global configs
- Multiple environment setup
- HTTP proxy configuration
- Troubleshooting mcp-remote issues

Cline (CLINE_CONFIG.md):
- cline_mcp_settings.json format
- UI-based configuration instructions
- Known issue documentation (v3.17.5+ regression)
- Autonomous agent usage examples
- Team sharing capabilities

Common features across all guides:
- Streamable HTTP transport via mcp-remote
- Bearer token authentication
- Environment variable patterns
- Self-signed certificate handling
- Complete troubleshooting sections
- Example usage scenarios

Updates:
- README: Add MCP Client Configuration section
- Wiki sidebar: Add dedicated MCP Clients section

Status: Based on official client documentation, not yet tested.
Users encouraged to provide feedback.

--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -122,7 +122,12 @@ jobs:
           * [🏠 Home](Home)
           * [📥 Installation](INSTALLATION)
           * [⚙️ Configuration](CONFIGURATION)
-          * [🖥️ Claude Desktop Setup](CLAUDE_DESKTOP_CONFIG)
+
+          ## MCP Clients
+          * [🖥️ Claude Desktop](CLAUDE_DESKTOP_CONFIG)
+          * [💻 Continue.dev](CONTINUE_CONFIG)
+          * [⚡ Cursor](CURSOR_CONFIG)
+          * [🤖 Cline](CLINE_CONFIG)
 
           ## Using the Server
           * [🚀 Usage Guide](USAGE)
