docs: clarify tested vs untested client configurations
Clearly distinguish between tested and untested configurations:

README.md:
- Split MCP clients into two sections
- "Tested & Validated" with ✅ (Claude Desktop only)
- "Community Configurations" with ⚠️ (Continue, Cursor, Cline)
- Add feedback invitation for community testing

Client documentation:
- Enhanced disclaimer boxes (more visible)
- Explicit "UNTESTED CONFIGURATION" warning
- Clear status: "Community contribution - feedback needed"
- Direct link to GitHub Issues for feedback

Wiki sidebar:
- Add ✅/⚠️ indicators next to each client
- Add legend explaining symbols
- Visual distinction between tested and untested

Impact:
- Users clearly understand which configs are production-ready
- Encourages community testing and feedback
- Transparent about configuration status

--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -124,10 +124,12 @@ jobs:
           * [⚙️ Configuration](CONFIGURATION)
 
           ## MCP Clients
-          * [🖥️ Claude Desktop](CLAUDE_DESKTOP_CONFIG)
-          * [💻 Continue.dev](CONTINUE_CONFIG)
-          * [⚡ Cursor](CURSOR_CONFIG)
-          * [🤖 Cline](CLINE_CONFIG)
+          * [🖥️ Claude Desktop](CLAUDE_DESKTOP_CONFIG) ✅
+          * [💻 Continue.dev](CONTINUE_CONFIG) ⚠️
+          * [⚡ Cursor](CURSOR_CONFIG) ⚠️
+          * [🤖 Cline](CLINE_CONFIG) ⚠️
+
+          **Legend**: ✅ Tested | ⚠️ Community config
 
           ## Using the Server
           * [🚀 Usage Guide](USAGE)
